examples/type_system/failing/151_array_literal_concrete_conflict_prefers_e300.flx
fn main() -> Unit {
    let xs: Array<Int> = [|1, "two"|]
}
